Trying IntelliJ